--- a/blog.html
+++ b/blog.html
@@ -77,6 +77,7 @@
                 
                 <!-- contact information -->
                 <br><br>
+                <div class="col-12 col-md-10 offset-md-1">
                 <div class="row no-gutters offices">
                     <div class="col-12 title">
                         <h5>OUR LOCATIONS</h5>
