--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
             </div>
 
         </nav>
-
+    </div>
     </div>
     <main>
         <div class="row-no-gutters">
@@ -60,8 +60,6 @@
 
         </div>
     </main>
-</div>
-<main>
     
     <!-- footer -->
 <footer class="page-footer">
@@ -95,6 +93,7 @@
             
             <!-- contact information -->
             <br><br>
+            <div class="col-12 col-md-10 offset-md-1">
             <div class="row no-gutters offices">
                 <div class="col-12 title">
                     <h5>OUR LOCATIONS</h5>
@@ -139,6 +138,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <!-- copyright footer information -->
         <div class="footer-copyright">
             <div class="col-12 col-md-10 offset-md-1">
@@ -148,9 +148,6 @@
         </div>
     </footer>
     </div>
-
-
-</main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
