--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
         <div class="row no-gutters">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 bigimage">
                         <!-- big image -->
-                        <img class="img-responsive" src="IMG/img5.jpg" alt=""></div>
+                        <img class="img-fluid" src="IMG/img5.jpg" alt=""></div>
 
                     <!-- two small divs -->
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 paras">
                         <div class="row no-gutters">
                             <div class="col-12 one">
+                                <h4>SYMBION GROUP</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Offici
                                         a ab doloribus ducimus modi consequatur facilis pariatur nemo! Voluptatem
                                         temporibus
@@ -72,6 +73,7 @@
                                 </div>
                             </div>
                             <div class="col-12 two">
+                                    <a href="#" class=""></a>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Offici
                                         a ab doloribus ducimus modi consequatur facilis pariatur nemo! Voluptatem
                                         temporibus
