--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
     </div>
     </div>
     <main>
-        <div class="row-no-gutters">
+        <div class="row no-gutters">
             <div class="col-12">
                         <!-- background image -->
                         <div class="image-text">
